--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ torchdata==0.6.1
 xformers==0.0.20
 triton==2.0.0
 einops
-pytorch_lightning
+pytorch_lightning==1.4.2
 gradio
 omegaconf
 transformers
