--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,18 @@ torchtext==0.15.2
 torchdata==0.6.1
 xformers==0.0.20
 triton==2.0.0
-einops
 pytorch_lightning==1.4.2
-gradio
+einops
+open-clip-torch
 omegaconf
-transformers
+torchmetrics==0.6.0
+triton
+opencv-python-headless
+scipy
+matplotlib
 lpips
-opencv-python
-git+https://github.com/mlfoundations/open_clip@v2.20.0
+gradio
+chardet
+transformers
+facexlib
 openxlab
