--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.0.1+cu118
-torchvision==0.15.2+cu118
-torchaudio==2.0.2+cu118
-torchtext==0.15.2
-torchdata==0.6.1
-xformers==0.0.20
+--extra-index-url https://download.pytorch.org/whl/cu116
+torch==1.13.1+cu116
+torchvision==0.14.1+cu116
+torchaudio==0.13.1
+xformers==0.0.16
 pytorch_lightning==1.4.2
 einops
 open-clip-torch
